--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>斗六顧徳補習班 | 數學權威．升學首選</title>
+    <title>斗六顧徳補習班 | 數學權威．安親課輔．升學首選</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -26,12 +26,13 @@
             <div class="text-2xl font-extrabold brand-color flex items-center">
                 <i class="fas fa-shapes mr-2"></i> 斗六顧徳
             </div>
-            <div class="hidden md:flex space-x-8 text-gray-700 font-bold">
+            <div class="hidden md:flex space-x-6 text-gray-700 font-bold text-lg">
                 <a href="#features" class="hover:text-blue-600 transition">數學強項</a>
                 <a href="#courses" class="hover:text-blue-600 transition">課程介紹</a>
+                <a href="#care" class="text-orange-600 hover:text-orange-800 transition"><i class="fas fa-child"></i> 安親課輔</a>
                 <a href="#location" class="hover:text-blue-600 transition">教室位置</a>
             </div>
-            <a href="#contact" class="bg-brand text-white px-5 py-2 rounded-full hover:bg-blue-700 transition shadow-md">
+            <a href="#contact" class="bg-brand text-white px-5 py-2 rounded-full hover:bg-blue-700 transition shadow-md text-sm md:text-base">
                 預約試聽
             </a>
         </div>
@@ -45,10 +46,10 @@
             <h1 class="text-4xl md:text-6xl font-bold mb-4 tracking-wider leading-tight">
                 讓數學變成<br>孩子的優勢科目
             </h1>
-            <p class="text-xl md:text-2xl mb-10 text-blue-100">從國小扎根到國中衝刺，邏輯思維全面啟發</p>
+            <p class="text-xl md:text-2xl mb-10 text-blue-100">國小安親．國中衝刺．全方位學習中心</p>
             <div class="flex justify-center space-x-4">
                 <a href="#courses" class="bg-white text-blue-800 px-8 py-3 rounded-lg font-bold hover:bg-gray-100 transition shadow-lg">
-                    查看數學課程
+                    查看課程
                 </a>
                 <a href="tel:055329189" class="bg-blue-600 border border-blue-400 text-white px-8 py-3 rounded-lg font-bold hover:bg-blue-700 transition shadow-lg">
                     <i class="fas fa-phone-alt mr-2"></i> 電話諮詢
@@ -127,6 +128,62 @@
         </div>
     </section>
 
+    <section id="care" class="py-20 bg-orange-50">
+        <div class="container mx-auto px-6">
+            <div class="text-center mb-16">
+                <span class="text-orange-600 font-bold tracking-wider text-sm">PARENTS' BEST CHOICE</span>
+                <h2 class="text-3xl font-bold text-gray-800 mt-2">國小安親課輔班</h2>
+                <div class="w-20 h-1 bg-orange-500 mx-auto mt-4"></div>
+                <p class="text-gray-600 mt-4 max-w-2xl mx-auto">專為雙薪家庭打造的安心環境。從放學接送、作業指導到生活常規，我們比您更在乎孩子的每一個細節。</p>
+            </div>
+
+            <div class="grid md:grid-cols-2 gap-12 items-center">
+                <div class="space-y-8">
+                    <div class="flex items-start">
+                        <div class="flex-shrink-0 bg-orange-100 p-4 rounded-lg text-orange-600 text-2xl">
+                            <i class="fas fa-school"></i>
+                        </div>
+                        <div class="ml-6">
+                            <h3 class="text-xl font-bold mb-2">國小放學專人接送</h3>
+                            <p class="text-gray-600">斗六學區專車接送，確保孩子放學路途安全，家長上班無後顧之憂。</p>
+                        </div>
+                    </div>
+                    
+                    <div class="flex items-start">
+                        <div class="flex-shrink-0 bg-orange-100 p-4 rounded-lg text-orange-600 text-2xl">
+                            <i class="fas fa-book-open"></i>
+                        </div>
+                        <div class="ml-6">
+                            <h3 class="text-xl font-bold mb-2">學校作業精準指導</h3>
+                            <p class="text-gray-600">每日檢查學校作業，即時訂正錯誤，並針對孩子較弱的科目加強輔導。</p>
+                        </div>
+                    </div>
+
+                    <div class="flex items-start">
+                        <div class="flex-shrink-0 bg-orange-100 p-4 rounded-lg text-orange-600 text-2xl">
+                            <i class="fas fa-utensils"></i>
+                        </div>
+                        <div class="ml-6">
+                            <h3 class="text-xl font-bold mb-2">生活常規與品格教育</h3>
+                            <p class="text-gray-600">不只顧成績，更重視禮貌與生活習慣。提供營養點心，照顧孩子的發育。</p>
+                        </div>
+                    </div>
+
+                    <div class="pt-4">
+                        <a href="#contact" class="inline-block bg-orange-500 text-white px-8 py-3 rounded-lg font-bold hover:bg-orange-600 transition shadow-md">
+                            預約參觀安親班
+                        </a>
+                    </div>
+                </div>
+
+                <div class="relative">
+                    <div class="absolute -inset-4 bg-orange-200 rounded-xl transform rotate-2"></div>
+                    <img src="https://images.unsplash.com/photo-1488521787991-ed7bbaae773c?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" class="relative rounded-xl shadow-2xl w-full h-auto object-cover" alt="安親班上課情境">
+                </div>
+            </div>
+        </div>
+    </section>
+
     <footer id="contact" class="bg-gray-900 text-white py-16">
         <div class="container mx-auto px-6">
             <div class="grid md:grid-cols-2 gap-12 items-start">
@@ -165,9 +222,9 @@
                 </div>
 
                 <div class="bg-white text-gray-800 p-8 rounded-xl shadow-2xl">
-                    <h4 class="text-2xl font-bold mb-4 text-blue-900">預約免費試聽</h4>
+                    <h4 class="text-2xl font-bold mb-4 text-blue-900">預約免費試聽 / 安親諮詢</h4>
                     <p class="text-gray-600 mb-6">
-                        請點擊下方按鈕填寫 Google 表單，留下您的聯絡資訊，我們將會有專人儘快與您聯繫安排試聽時間。
+                        請點擊下方按鈕填寫 Google 表單，留下您的聯絡資訊，我們將會有專人儘快與您聯繫安排。
                     </p>
                     
                     <a href="https://docs.google.com/forms/d/1oePE-pP9v5peUJhkq0Kxe_VJiJSwW5jRz79SX3gMF5o/viewform" target="_blank" class="block w-full text-center bg-blue-600 text-white font-bold py-4 rounded-lg hover:bg-blue-700 transition transform active:scale-95 shadow-lg">
