Refactor index.html for improved structure and content

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <i class="fas fa-shapes mr-2"></i> 斗六顧徳
             </div>
             <div class="hidden md:flex space-x-6 text-gray-700 font-bold text-lg">
+                <a href="#timer" class="text-red-600 hover:text-red-800 transition"><i class="fas fa-clock"></i> 段考倒數</a>
                 <a href="#features" class="hover:text-blue-600 transition">數學強項</a>
                 <a href="#courses" class="hover:text-blue-600 transition">課程介紹</a>
                 <a href="#care" class="text-orange-600 hover:text-orange-800 transition"><i class="fas fa-child"></i> 安親課輔</a>
@@ -57,6 +58,31 @@
             </div>
         </div>
     </header>
+
+    <section id="timer" class="py-16 bg-gray-100">
+        <div class="container mx-auto px-6">
+            <div class="text-center mb-8">
+                <h2 class="text-3xl font-bold text-red-600 flex items-center justify-center">
+                    <i class="fas fa-stopwatch mr-3"></i> 斗六國中小段考倒數
+                </h2>
+                <p class="text-gray-600 mt-2 font-bold">距離考試還有多久？把握每一分鐘，顧徳陪你一起衝刺！</p>
+            </div>
+            
+            <div class="w-full max-w-5xl mx-auto bg-white rounded-2xl shadow-2xl overflow-hidden border-4 border-gray-200">
+                <iframe src="https://douliutimer-gkegcwva.manus.space/" 
+                        class="w-full h-[600px] md:h-[700px]" 
+                        frameborder="0" 
+                        allowfullscreen>
+                </iframe>
+            </div>
+            
+            <div class="text-center mt-6">
+                <a href="#contact" class="inline-block bg-red-600 text-white px-8 py-3 rounded-full font-bold hover:bg-red-700 transition shadow-lg animate-pulse">
+                    覺得時間不夠用？快來預約加強輔導！
+                </a>
+            </div>
+        </div>
+    </section>
 
     <section id="features" class="py-20 container mx-auto px-6">
         <div class="text-center mb-16">
