--- a/index.html
+++ b/index.html
@@ -59,28 +59,21 @@
         </div>
     </header>
 
-    <section id="timer" class="py-16 bg-gray-100">
-        <div class="container mx-auto px-6">
-            <div class="text-center mb-8">
-                <h2 class="text-3xl font-bold text-red-600 flex items-center justify-center">
-                    <i class="fas fa-stopwatch mr-3"></i> 斗六國中小段考倒數
-                </h2>
-                <p class="text-gray-600 mt-2 font-bold">距離考試還有多久？把握每一分鐘，顧徳陪你一起衝刺！</p>
-            </div>
+    <section id="timer" class="py-16 bg-red-50">
+        <div class="container mx-auto px-6 text-center">
+            <h2 class="text-3xl font-bold text-red-800 mb-4">
+                <i class="fas fa-stopwatch"></i> 把握時間，決戰考場
+            </h2>
+            <p class="text-gray-600 mb-8 text-lg">
+                還在擔心來不及複習嗎？隨時掌握斗六國中小段考剩餘天數。<br>
+                點擊下方按鈕，立即查看最新倒數時間！
+            </p>
             
-            <div class="w-full max-w-5xl mx-auto bg-white rounded-2xl shadow-2xl overflow-hidden border-4 border-gray-200">
-                <iframe src="https://douliutimer-gkegcwva.manus.space/" 
-                        class="w-full h-[600px] md:h-[700px]" 
-                        frameborder="0" 
-                        allowfullscreen>
-                </iframe>
-            </div>
+            <a href="https://douliutimer-gkegcwva.manus.space/" target="_blank" class="inline-flex items-center justify-center bg-red-600 text-white text-xl font-bold px-10 py-5 rounded-full shadow-xl hover:bg-red-700 hover:scale-105 transition transform duration-300 border-4 border-white">
+                <i class="fas fa-external-link-alt mr-3"></i> 查看段考倒數計時器
+            </a>
             
-            <div class="text-center mt-6">
-                <a href="#contact" class="inline-block bg-red-600 text-white px-8 py-3 rounded-full font-bold hover:bg-red-700 transition shadow-lg animate-pulse">
-                    覺得時間不夠用？快來預約加強輔導！
-                </a>
-            </div>
+            <p class="mt-4 text-sm text-gray-500">* 點擊後將開啟新視窗</p>
         </div>
     </section>
 
