Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -74,7 +74,19 @@
         </div>
     </header>
 
-    <section id="features" class="py-20 container mx-auto px-6">
+    <section class="py-16 bg-red-800 text-white relative overflow-hidden">
+        <div class="absolute inset-0 bg-[url('https://www.transparenttextures.com/patterns/stardust.png')] opacity-20"></div>
+        <div class="container mx-auto px-6 text-center relative z-10">
+            <i class="fas fa-trophy text-6xl text-yellow-400 mb-4 animate-bounce"></i>
+            <h2 class="text-4xl font-bold mb-4">狂賀！斗六顧徳 榜單大放異彩</h2>
+            <p class="text-xl text-red-100 mb-8">見證實力，超越自我。點擊下方按鈕查看最新亮眼榜單。</p>
+            <a href="honor.html" class="inline-block bg-yellow-400 text-red-900 font-extrabold text-xl px-10 py-4 rounded-full shadow-xl hover:bg-yellow-300 hover:scale-105 transition transform">
+                查看完整榮譽榜 <i class="fas fa-arrow-right ml-2"></i>
+            </a>
+        </div>
+    </section>
+
+    <section id="features" class="py-20 container mx-auto px-6 bg-white">
         <div class="text-center mb-16">
             <h2 class="text-3xl font-bold brand-color mb-4">為什麼選擇斗六顧徳？</h2>
             <div class="w-20 h-1 bg-yellow-400 mx-auto"></div>
@@ -106,6 +118,7 @@
             </div>
             
             <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
+                
                 <div class="bg-white rounded-2xl overflow-hidden shadow-lg flex flex-col">
                     <div class="h-48 relative">
                         <img src="https://images.unsplash.com/photo-1509062522246-3755977927d7?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" class="absolute inset-0 w-full h-full object-cover">
@@ -121,6 +134,7 @@
                         </ul>
                     </div>
                 </div>
+
                 <div class="bg-white rounded-2xl overflow-hidden shadow-lg flex flex-col">
                     <div class="h-48 relative">
                         <img src="https://images.unsplash.com/photo-1596495578065-6e0763fa1178?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" class="absolute inset-0 w-full h-full object-cover">
@@ -136,6 +150,7 @@
                         </ul>
                     </div>
                 </div>
+
                 <div class="bg-white rounded-2xl overflow-hidden shadow-lg flex flex-col border-t-4 border-red-600">
                     <div class="h-48 relative">
                         <img src="https://images.unsplash.com/photo-1516979187457-637abb4f9353?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" class="absolute inset-0 w-full h-full object-cover">
@@ -151,6 +166,7 @@
                         </ul>
                     </div>
                 </div>
+
             </div>
         </div>
     </section>
@@ -193,18 +209,6 @@
                     <img src="https://images.unsplash.com/photo-1580582932707-520aed937b7b?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" class="relative rounded-xl shadow-2xl w-full h-auto object-cover" alt="顧德補習班上課環境">
                 </div>
             </div>
-        </div>
-    </section>
-
-    <section class="py-16 bg-red-800 text-white relative overflow-hidden">
-        <div class="absolute inset-0 bg-[url('https://www.transparenttextures.com/patterns/stardust.png')] opacity-20"></div>
-        <div class="container mx-auto px-6 text-center relative z-10">
-            <i class="fas fa-trophy text-6xl text-yellow-400 mb-4 animate-bounce"></i>
-            <h2 class="text-4xl font-bold mb-4">狂賀！斗六顧徳 榜單大放異彩</h2>
-            <p class="text-xl text-red-100 mb-8">見證實力，超越自我。點擊下方按鈕查看最新亮眼榜單。</p>
-            <a href="honor.html" class="inline-block bg-yellow-400 text-red-900 font-extrabold text-xl px-10 py-4 rounded-full shadow-xl hover:bg-yellow-300 hover:scale-105 transition transform">
-                查看完整榮譽榜 <i class="fas fa-arrow-right ml-2"></i>
-            </a>
         </div>
     </section>
 
@@ -252,5 +256,6 @@
             <div class="text-center mt-16 pt-8 border-t border-gray-800 text-gray-500 text-sm">© 2024 斗六顧徳補習班. All Rights Reserved.</div>
         </div>
     </footer>
+
 </body>
 </html>
