--- a/honor.html
+++ b/honor.html
@@ -31,7 +31,7 @@
         <div class="grid md:grid-cols-3 gap-6">
             
             <div class="bg-white p-3 rounded-lg shadow-lg border border-gray-200">
-                <img src="https://via.placeholder.com/600x800?text=good01" class="w-full h-auto rounded">
+                <img src="https://via.placeholder.com/600x800?text=good01.png" class="w-full h-auto rounded">
                 <p class="text-center mt-2 font-bold text-gray-700">113下學期段考成績優異</p>
             </div>
 
@@ -55,3 +55,4 @@
 </body>
 
 </html>
+
