--- a/honor.html
+++ b/honor.html
@@ -34,7 +34,7 @@
         <div class="grid md:grid-cols-3 gap-8">
             
             <div class="bg-white p-4 rounded-lg shadow-lg border border-red-200 hover:shadow-xl hover:-translate-y-1 transition duration-300">
-                <img src="good01.png" class="w-full h-auto rounded border-2 border-red-100">
+                <img src="113年學期成績優異.png" class="w-full h-auto rounded border-2 border-red-100">
                 <p class="text-center mt-3 font-extrabold text-xl text-red-700">113年學期成績優異</p>
             </div>
 
@@ -63,3 +63,4 @@
 
 </body>
 </html>
+
