Enhance honor.html with image links and effects
Updated image links to open in new tab and added hover effects.

--- a/honor.html
+++ b/honor.html
@@ -28,23 +28,29 @@
         <div class="text-center mb-16">
             <i class="fas fa-crown text-yellow-500 text-6xl mb-4"></i>
             <h1 class="text-5xl font-extrabold text-red-700 mt-2 tracking-wide">金榜題名 🏆 榮譽榜</h1>
-            <p class="text-xl text-gray-600 mt-4">見證實力，超越自我。顧徳學子，出類拔萃！</p>
+            <p class="text-xl text-gray-600 mt-4">見證實力，超越自我。點擊照片即可查看細節大圖！</p>
         </div>
         
         <div class="grid md:grid-cols-3 gap-8">
             
-            <div class="bg-white p-4 rounded-lg shadow-lg border border-red-200 hover:shadow-xl hover:-translate-y-1 transition duration-300">
-                <img src="113年學期成績優異.png" class="w-full h-auto rounded border-2 border-red-100">
+            <div class="bg-white p-4 rounded-lg shadow-lg border border-red-200 hover:shadow-xl hover:-translate-y-1 transition duration-300 group">
+                <a href="good01.png" target="_blank" class="block overflow-hidden rounded">
+                    <img src="113年學期成績優異.png" class="w-full h-auto transform transition duration-300 group-hover:scale-105 border-2 border-red-100">
+                </a>
                 <p class="text-center mt-3 font-extrabold text-xl text-red-700">113年學期成績優異</p>
             </div>
 
-            <div class="bg-white p-4 rounded-lg shadow-lg border border-gray-200 hover:shadow-xl hover:-translate-y-1 transition duration-300">
-                <img src="https://via.placeholder.com/600x800?text=校排進步榮譽榜" class="w-full h-auto rounded border-2 border-gray-100">
+            <div class="bg-white p-4 rounded-lg shadow-lg border border-gray-200 hover:shadow-xl hover:-translate-y-1 transition duration-300 group">
+                <a href="https://via.placeholder.com/600x800?text=校排進步榮譽榜" target="_blank" class="block overflow-hidden rounded">
+                    <img src="https://via.placeholder.com/600x800?text=校排進步榮譽榜" class="w-full h-auto transform transition duration-300 group-hover:scale-105 border-2 border-gray-100">
+                </a>
                 <p class="text-center mt-3 font-extrabold text-xl text-blue-700">校排進步榮譽榜</p>
             </div>
 
-            <div class="bg-white p-4 rounded-lg shadow-lg border border-gray-200 hover:shadow-xl hover:-translate-y-1 transition duration-300">
-                <img src="https://via.placeholder.com/600x800?text=數學滿分榜" class="w-full h-auto rounded border-2 border-gray-100">
+            <div class="bg-white p-4 rounded-lg shadow-lg border border-gray-200 hover:shadow-xl hover:-translate-y-1 transition duration-300 group">
+                <a href="https://via.placeholder.com/600x800?text=數學滿分榜" target="_blank" class="block overflow-hidden rounded">
+                    <img src="https://via.placeholder.com/600x800?text=數學滿分榜" class="w-full h-auto transform transition duration-300 group-hover:scale-105 border-2 border-gray-100">
+                </a>
                 <p class="text-center mt-3 font-extrabold text-xl text-blue-700">數學滿分榜</p>
             </div>
 
@@ -63,4 +69,3 @@
 
 </body>
 </html>
-
