--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 </div>
                 <div class="relative">
                     <div class="absolute -inset-4 bg-orange-200 rounded-xl transform rotate-2"></div>
-                    <img src="https://images.unsplash.com/photo-1580582932707-520aed937b7b?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" class="relative rounded-xl shadow-2xl w-full h-auto object-cover" alt="顧德補習班上課環境">
+                    <img src="顧德斗六分校.jpg" alt="顧德補習班上課環境">
                 </div>
             </div>
         </div>
@@ -259,3 +259,4 @@
 
 </body>
 </html>
+
