--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
                     </div>
                 </div>
                 <div class="relative">
-                    <div class="absolute -inset-4 bg-orange-200 rounded-xl transform rotate-2"></div>
-                    <img src="顧德斗六分校.jpg" alt="顧德補習班上課環境">
-                </div>
+    <div class="absolute -inset-4 bg-orange-200 rounded-xl transform rotate-2"></div>
+    <img src="顧德斗六分校.jpg" class="relative rounded-xl shadow-2xl w-full h-auto object-cover" alt="顧德斗六分校上課環境">
+</div>
             </div>
         </div>
     </section>
@@ -259,4 +259,5 @@
 
 </body>
 </html>
+
 
