--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 
                 <div class="bg-white rounded-2xl overflow-hidden shadow-lg flex flex-col">
                     <div class="h-40 relative">
-                        <img src="http://googleusercontent.com/image_collection/image_retrieval/2929716704251558662_0" class="absolute inset-0 w-full h-full object-cover">
+                        <img src="" class="absolute inset-0 w-full h-full object-cover">
                         <div class="absolute inset-0 bg-blue-900/20"></div>
                     </div>
                     <div class="p-4 flex flex-col flex-grow">
@@ -139,7 +139,7 @@
 
                 <div class="bg-white rounded-2xl overflow-hidden shadow-lg flex flex-col">
                     <div class="h-40 relative">
-                        <img src="http://googleusercontent.com/image_collection/image_retrieval/274107573634819849_0" class="absolute inset-0 w-full h-full object-cover">
+                        <img src="" class="absolute inset-0 w-full h-full object-cover">
                         <div class="absolute inset-0 bg-yellow-900/20"></div>
                     </div>
                     <div class="p-4 flex flex-col flex-grow">
@@ -277,7 +277,7 @@
                     
                     <p class="text-center text-gray-500 mb-3 sm:mb-4 font-bold text-sm">—— 或者 ——</p>
 
-                    <a href="https://docs.google.com/forms/d/1oePE-pP9v5peUJhkq0Kxe_VJiJSwW5jRz79SX3gMF5o/viewform" target="_blank" class="block w-full text-center bg-brand text-white font-bold py-3 sm:py-4 rounded-lg hover:opacity-90 transition transform active:scale-95 shadow-lg flex items-center justify-center text-sm sm:text-base">
+                    <a href="https://docs.google.com/forms/d/1oePE-pP9v5peUJhkq0Kxe_VJiJSwW5jRz79SX3gMF5o/viewform" target="_blank" class="block w-full text-center bg-brand text-white font-bold py-3 sm:py-4 rounded-lg hover:opacity-90 transition transform active:scale-95 shadow-lg flex items-center justify-center">
                         <i class="fas fa-pen-alt mr-2 text-lg sm:text-xl"></i> 填寫 Google 表單預約
                     </a>
                 </div>
