Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 
                 <div class="bg-white rounded-2xl overflow-hidden shadow-lg flex flex-col">
                     <div class="h-40 relative">
-                        <img src="" class="absolute inset-0 w-full h-full object-cover">
+                        <img src="國小數學資優班.png" class="absolute inset-0 w-full h-full object-cover">
                         <div class="absolute inset-0 bg-blue-900/20"></div>
                     </div>
                     <div class="p-4 flex flex-col flex-grow">
@@ -139,7 +139,7 @@
 
                 <div class="bg-white rounded-2xl overflow-hidden shadow-lg flex flex-col">
                     <div class="h-40 relative">
-                        <img src="" class="absolute inset-0 w-full h-full object-cover">
+                        <img src="國中數學進度班.png" class="absolute inset-0 w-full h-full object-cover">
                         <div class="absolute inset-0 bg-yellow-900/20"></div>
                     </div>
                     <div class="p-4 flex flex-col flex-grow">
@@ -155,7 +155,7 @@
 
                 <div class="bg-white rounded-2xl overflow-hidden shadow-lg flex flex-col border-t-4 border-red-600">
                     <div class="h-40 relative">
-                        <img src="" class="absolute inset-0 w-full h-full object-cover">
+                        <img src="帝都國文專班.png" class="absolute inset-0 w-full h-full object-cover">
                         <div class="absolute inset-0 bg-red-900/20"></div>
                     </div>
                     <div class="p-4 flex flex-col flex-grow">
