--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
                 
                 <div class="bg-white rounded-2xl overflow-hidden shadow-lg flex flex-col">
-                    <div class="h-40 relative">
+                    <div class="h-48 relative">
                         <img src="國小數學資優班.png" class="absolute inset-0 w-full h-full object-cover">
                         <div class="absolute inset-0 bg-blue-900/20"></div>
                     </div>
@@ -138,7 +138,7 @@
                 </div>
 
                 <div class="bg-white rounded-2xl overflow-hidden shadow-lg flex flex-col">
-                    <div class="h-40 relative">
+                    <div class="h-48 relative">
                         <img src="國中數學進度班.png" class="absolute inset-0 w-full h-full object-cover">
                         <div class="absolute inset-0 bg-yellow-900/20"></div>
                     </div>
@@ -154,7 +154,7 @@
                 </div>
 
                 <div class="bg-white rounded-2xl overflow-hidden shadow-lg flex flex-col border-t-4 border-red-600">
-                    <div class="h-40 relative">
+                    <div class="h-48 relative">
                         <img src="帝都國文專班.png" class="absolute inset-0 w-full h-full object-cover">
                         <div class="absolute inset-0 bg-red-900/20"></div>
                     </div>
@@ -277,7 +277,7 @@
                     
                     <p class="text-center text-gray-500 mb-3 sm:mb-4 font-bold text-sm">—— 或者 ——</p>
 
-                    <a href="https://docs.google.com/forms/d/1oePE-pP9v5peUJhkq0Kxe_VJiJSwW5jRz79SX3gMF5o/viewform" target="_blank" class="block w-full text-center bg-brand text-white font-bold py-3 sm:py-4 rounded-lg hover:opacity-90 transition transform active:scale-95 shadow-lg flex items-center justify-center">
+                    <a href="https://docs.google.com/forms/d/1oePE-pP9v5peUJhkq0Kxe_VJiJSwW5jRz79SX3gMF5o/viewform" target="_blank" class="block w-full text-center bg-brand text-white font-bold py-3 sm:py-4 rounded-lg hover:opacity-90 transition transform active:scale-95 shadow-lg flex items-center justify-center text-sm sm:text-base">
                         <i class="fas fa-pen-alt mr-2 text-lg sm:text-xl"></i> 填寫 Google 表單預約
                     </a>
                 </div>
