--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 🔥 斗六升學第一品牌
             </div>
             <h1 class="text-4xl md:text-6xl font-bold mb-4 tracking-wider leading-tight">
-                理化自然強項<br>數學國文專家
+                <br>國文數學專家 營隊專門家
             </h1>
             <p class="text-xl md:text-2xl mb-10 text-blue-100">顧徳數學 ✖ 帝都國文 ✖ 專業課輔</p>
             <div class="flex justify-center space-x-4">
@@ -295,3 +295,4 @@
 
 </body>
 </html>
+
