--- a/honor.html
+++ b/honor.html
@@ -9,17 +9,26 @@
     <style>
         body { font-family: 'Microsoft JhengHei', sans-serif; }
         .bg-brand { background-color: #0056b3; }
+        .bg-line { background-color: #00C300; }
+        .brand-color { color: #0056b3; }
     </style>
 </head>
 <body class="bg-gray-100 text-gray-800">
 
     <nav class="bg-white shadow-lg fixed w-full z-20 top-0">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <div class="text-2xl font-extrabold text-blue-800">
-                <a href="index.html">斗六顧徳</a>
+            <div class="text-xl md:text-2xl font-extrabold brand-color flex items-center">
+                <a href="index.html"><i class="fas fa-shapes mr-2"></i> 斗六顧徳</a>
             </div>
-            <a href="index.html" class="bg-brand text-white px-4 py-2 rounded hover:opacity-90 transition">
-                <i class="fas fa-arrow-left"></i> 回到首頁
+            <div class="hidden md:flex space-x-6 text-gray-700 font-bold text-lg items-center">
+                <a href="index.html#features" class="hover:text-blue-600 transition">教學特色</a>
+                <a href="index.html#courses" class="hover:text-blue-600 transition">課程介紹</a>
+                <a href="index.html#care" class="text-orange-600 hover:text-orange-800 transition"><i class="fas fa-child"></i> 安親課輔</a>
+                <a href="honor.html" class="text-red-600 hover:text-red-800 transition"><i class="fas fa-trophy"></i> 榮譽榜</a>
+                <a href="index.html#location" class="hover:text-blue-600 transition">教室位置</a>
+            </div>
+            <a href="https://lin.ee/XHcZIGc" target="_blank" class="bg-line text-white px-4 py-2 sm:px-5 sm:py-2 rounded-full hover:opacity-90 transition shadow-md text-sm md:text-base flex items-center">
+                <i class="fab fa-line mr-1 md:mr-2 text-lg md:text-xl"></i> 預約試聽
             </a>
         </div>
     </nav>
