--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                         <div class="flex items-center">
                             <i class="fab fa-facebook text-blue-500 w-6 sm:w-8 animate-pulse text-xl sm:text-2xl"></i>
                             <div>
-                                <a href="https://www.facebook.com/?locale=zh_TW" target="_blank" class="font-bold text-base sm:text-lg text-blue-400 hover:text-blue-200 transition">追蹤我們的 Facebook 粉絲專頁</a>
+                                <a href="https://www.facebook.com/douliougood/?locale=zh_TW" target="_blank" class="font-bold text-base sm:text-lg text-blue-400 hover:text-blue-200 transition">追蹤我們的 Facebook 粉絲專頁</a>
                             </div>
                         </div>
                     </div>
@@ -295,4 +295,5 @@
 
 </body>
 </html>
+
 
