--- a/wintercamp.html
+++ b/wintercamp.html
@@ -40,40 +40,14 @@
             <div class="grid md:grid-cols-2 gap-8 mb-10">
                 <div class="bg-white p-2 rounded-lg shadow-xl">
                     <h3 class="text-center font-bold text-lg mb-2">營隊主視覺</h3>
-                    <img src="https://via.placeholder.com/800x600?text=2026+Winter+Camp+Main+Visual" alt="冬令營主視覺" class="w-full h-auto rounded">
+                    <img src="2026w01.jpg" alt="冬令營主視覺" class="w-full h-auto rounded">
                 </div>
                 <div class="bg-white p-2 rounded-lg shadow-xl">
                     <h3 class="text-center font-bold text-lg mb-2">課程表與費用</h3>
-                    <img src="https://via.placeholder.com/800x600?text=2026+Camp+Schedule+Placeholder" alt="冬令營課表" class="w-full h-auto rounded">
+                    <img src="2026w02.jpg" alt="冬令營課表" class="w-full h-auto rounded">
                 </div>
             </div>
 
             <h2 class="text-3xl font-bold mb-6 text-red-800 border-b pb-2">活動資訊</h2>
             <div class="bg-white p-6 rounded-lg shadow-md space-y-4">
-                <p class="text-lg"><span class="font-bold text-red-700">❚ 活動日期：</span> 2026年 1/20 ~ 1/30 (共 10 天)</p>
-                <p class="text-lg"><span class="font-bold text-red-700">❚ 招生對象：</span> 國小高年級、國中一至三年級</p>
-                <p class="text-lg"><span class="font-bold text-red-700">❚ 課程特色：</span> 數理單元加強、國文閱讀精修、考前猜題、晚自習輔導。</p>
-            </div>
-        </div>
-
-        <div class="text-center mt-16 p-8 bg-gray-200 rounded-xl">
-            <h3 class="text-3xl font-bold mb-6 text-blue-800">名額有限！立即搶先報名</h3>
-            <div class="flex flex-col md:flex-row justify-center space-y-4 md:space-y-0 md:space-x-8">
-                
-                <a href="https://docs.google.com/forms/d/1oePE-pP9v5peUJhkq0Kxe_VJiJSwW5jRz79SX3gMF5o/viewform" target="_blank" class="bg-brand text-white font-bold text-xl px-10 py-4 rounded-lg shadow-xl hover:opacity-90 transition flex items-center justify-center">
-                    <i class="fas fa-pen-alt mr-2"></i> 2026 Google 表單報名
-                </a>
-                
-                <a href="https://lin.ee/XHcZIGc" target="_blank" class="bg-line text-white font-bold text-xl px-10 py-4 rounded-lg shadow-xl hover:opacity-90 transition flex items-center justify-center">
-                    <i class="fab fa-line mr-2"></i> LINE 課程諮詢
-                </a>
-            </div>
-        </div>
-    </div>
-
-    <footer class="bg-gray-900 text-white py-8 text-center">
-        <p>© 2024 斗六顧徳補習班</p>
-    </footer>
-
-</body>
-</html>
+                <p class="text-lg"><span class="font-
