--- a/wintercamp.html
+++ b/wintercamp.html
@@ -31,7 +31,7 @@
         <div class="text-center mb-16 bg-winter p-8 rounded-xl border-4 border-yellow-500">
             <i class="fas fa-snowflake text-6xl text-red-600 mb-4 animate-bounce"></i>
             <h1 class="text-5xl font-extrabold text-red-700 mt-2 tracking-wide">2026 顧德冬令營</h1>
-            <p class="text-2xl text-gray-700 mt-2 font-bold">國中數理總複習・國小重點科目超前部署</p>
+            <p class="text-2xl text-gray-700 mt-2 font-bold">寒假顧德不打烊・數理國文全方位衝刺</p>
         </div>
         
         <div class="max-w-4xl mx-auto">
@@ -40,14 +40,15 @@
             <div class="grid md:grid-cols-2 gap-8 mb-10">
                 <div class="bg-white p-2 rounded-lg shadow-xl">
                     <h3 class="text-center font-bold text-lg mb-2">營隊主視覺</h3>
-                    <img src="2026w01.jpg" alt="冬令營主視覺" class="w-full h-auto rounded">
+                    <img src="2026w01.jpg" alt="2026冬令營主視覺" class="w-full h-auto rounded border border-gray-300">
                 </div>
                 <div class="bg-white p-2 rounded-lg shadow-xl">
                     <h3 class="text-center font-bold text-lg mb-2">課程表與費用</h3>
-                    <img src="2026w02.jpg" alt="冬令營課表" class="w-full h-auto rounded">
+                    <img src="2026w02.jpg" alt="2026冬令營課表" class="w-full h-auto rounded border border-gray-300">
                 </div>
             </div>
 
             <h2 class="text-3xl font-bold mb-6 text-red-800 border-b pb-2">活動資訊</h2>
             <div class="bg-white p-6 rounded-lg shadow-md space-y-4">
-                <p class="text-lg"><span class="font-
+                <p class="text-lg"><span class="font-bold text-red-700">❚ 活動日期：</span> **2026年 1/24 ~ 2/13** (週一至週五上課)</p>
+                <p class="text-lg">
