--- a/wintercamp.html
+++ b/wintercamp.html
@@ -31,7 +31,7 @@
         <div class="text-center mb-16 bg-winter p-8 rounded-xl border-4 border-yellow-500">
             <i class="fas fa-snowflake text-6xl text-red-600 mb-4 animate-bounce"></i>
             <h1 class="text-5xl font-extrabold text-red-700 mt-2 tracking-wide">2026 顧德冬令營</h1>
-            <p class="text-2xl text-gray-700 mt-2 font-bold">寒假顧德不打烊・數理國文全方位衝刺</p>
+            <p class="text-2xl text-gray-700 mt-2 font-bold">寒假顧德不打烊・數學國文先修全方位衝刺</p>
         </div>
         
         <div class="max-w-4xl mx-auto">
@@ -40,11 +40,11 @@
             <div class="grid md:grid-cols-2 gap-8 mb-10">
                 <div class="bg-white p-2 rounded-lg shadow-xl">
                     <h3 class="text-center font-bold text-lg mb-2">營隊主視覺</h3>
-                    <img src="2026w01.jpg" alt="2026冬令營主視覺" class="w-full h-auto rounded border border-gray-300">
+                    <img src="2026w01.png" alt="2026冬令營主視覺" class="w-full h-auto rounded border border-gray-300">
                 </div>
                 <div class="bg-white p-2 rounded-lg shadow-xl">
                     <h3 class="text-center font-bold text-lg mb-2">課程表與費用</h3>
-                    <img src="2026w02.jpg" alt="2026冬令營課表" class="w-full h-auto rounded border border-gray-300">
+                    <img src="2026w02.png" alt="2026冬令營課表" class="w-full h-auto rounded border border-gray-300">
                 </div>
             </div>
 
