--- a/index.html
+++ b/index.html
@@ -137,15 +137,15 @@
     <section id="wintercamp" class="py-16 bg-yellow-100 border-b-4 border-yellow-400">
         <div class="container mx-auto px-6 text-center">
             <span class="bg-red-600 text-white font-bold px-3 py-1 rounded text-sm animate-pulse">限額招生中！</span>
-            <h2 class="text-3xl font-extrabold text-gray-800 mt-3 mb-4">2026 顧德冬令營 - 理化數理加強班</h2>
-            <p class="text-xl text-gray-700 mb-6">利用寒假超前部署，針對國三總複習及國小重點科目進行強化。</p>
+            <h2 class="text-3xl font-extrabold text-gray-800 mt-3 mb-4">2026 顧德國中冬令營 - 國文數理加強班</h2>
+            <p class="text-xl text-gray-700 mb-6">國一,國二利用寒假超前部署，針對國三總複習各科目進行強化。</p>
             
             <div class="flex flex-col md:flex-row justify-center items-center space-y-4 md:space-y-0 md:space-x-8">
                 <div class="text-2xl font-bold text-red-700 flex items-center">
                     <i class="fas fa-calendar-alt mr-3"></i> 報名截止：2026/01/15
                 </div>
                 <div class="text-2xl font-bold text-blue-700 flex items-center">
-                    <i class="fas fa-user-friends mr-3"></i> 課程名額：僅剩 12 席
+                    <i class="fas fa-user-friends mr-3"></i> 課程名額：僅剩 8 席
                 </div>
             </div>
 
