--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <p class="text-gray-600 mb-6 text-base">利用寒假衝刺數理，超前部署下一學期！限時優惠，名額一滿即止。</p>
             
             <div class="space-y-3">
-                <a href="#wintercamp" onclick="closePopup()" class="block bg-red-600 text-white font-bold py-3 rounded-lg hover:bg-red-700 transition shadow-md">
+                <a href="wintercamp.html" onclick="closePopup()" class="block bg-red-600 text-white font-bold py-3 rounded-lg hover:bg-red-700 transition shadow-md">
                     <i class="fab fa-line mr-2"></i> 立即搶佔最後名額
                 </a>
                 
@@ -109,7 +109,7 @@
             </h1>
             <p class="text-xl md:text-2xl mb-10 text-blue-100">顧徳數學 ✖ 帝都國文 ✖ 專業課輔</p>
             <div class="flex justify-center space-x-4">
-                <a href="#wintercamp" class="bg-yellow-400 text-red-800 px-6 py-2 md:px-8 md:py-3 rounded-lg font-bold hover:bg-yellow-500 transition shadow-lg text-sm md:text-base">
+                <a href="wintercamp.html" class="bg-yellow-400 text-red-800 px-6 py-2 md:px-8 md:py-3 rounded-lg font-bold hover:bg-yellow-500 transition shadow-lg text-sm md:text-base">
                     2026 冬令營
                 </a>
                 <a href="#courses" class="bg-white text-blue-800 px-6 py-2 md:px-8 md:py-3 rounded-lg font-bold hover:bg-gray-100 transition shadow-lg text-sm md:text-base">
@@ -149,7 +149,12 @@
                 </div>
             </div>
 
+            <div class="mt-8">
+                <a href="wintercamp.html" class="inline-block bg-red-600 text-white font-extrabold text-xl px-12 py-5 rounded-lg shadow-2xl hover:bg-red-700 hover:scale-105 transition transform">
+                    <i class="fas fa-info-circle mr-2"></i> 點擊查看詳細課表！
+                </a>
             </div>
+        </div>
     </section>
 
 
