--- a/wintercamp.html
+++ b/wintercamp.html
@@ -40,11 +40,11 @@
             <div class="grid md:grid-cols-2 gap-8 mb-10">
                 <div class="bg-white p-2 rounded-lg shadow-xl">
                     <h3 class="text-center font-bold text-lg mb-2">營隊主視覺</h3>
-                    <img src="2026w01.jpg" alt="2026冬令營主視覺" class="w-full h-auto rounded border border-gray-300">
+                    <img src="2026w01.png" alt="2026冬令營主視覺" class="w-full h-auto rounded border border-gray-300">
                 </div>
                 <div class="bg-white p-2 rounded-lg shadow-xl">
                     <h3 class="text-center font-bold text-lg mb-2">課程表與費用</h3>
-                    <img src="2026w02.jpg" alt="2026冬令營課表" class="w-full h-auto rounded border border-gray-300">
+                    <img src="2026w02.png" alt="2026冬令營課表" class="w-full h-auto rounded border border-gray-300">
                 </div>
             </div>
 
@@ -54,7 +54,7 @@
                 <p class="text-xl font-bold text-red-700 border-b-2 border-gray-100 pb-2">
                     <i class="fas fa-calendar-alt mr-2"></i> 主要上課資訊
                 </p>
-                <p class="text-lg"><span class="font-bold text-gray-800">❚ 營隊日期：</span> 1月24日 ~ 2月13日 (共三週)</p>
+                <p class="text-lg"><span class="font-bold text-gray-800">❚ 營隊日期：</span> **2026年 1/24 ~ 2/13** (週一至週五上課)</p>
                 <p class="text-lg"><span class="font-bold text-gray-800">❚ 營隊時間：</span> (週一至週五) **7:30 - 18:00**</p>
                 <p class="text-lg"><span class="font-bold text-gray-800">❚ 招生對象：</span> 國小、國中學生</p>
 
