--- a/wintercamp.html
+++ b/wintercamp.html
@@ -29,7 +29,6 @@
 
     <div class="pt-24 pb-12 container mx-auto px-6">
         <div class="text-center mb-16 bg-winter p-8 rounded-xl border-4 border-yellow-500">
-            <i class="fas fa-snowflake text-6xl text-red-600 mb-4 animate-bounce"></i>
             <h1 class="text-5xl font-extrabold text-red-700 mt-2 tracking-wide">2026 顧德冬令營</h1>
             <p class="text-2xl text-gray-700 mt-2 font-bold">寒假顧德不打烊・數理國文全方位衝刺</p>
         </div>
@@ -40,11 +39,11 @@
             <div class="grid md:grid-cols-2 gap-8 mb-10">
                 <div class="bg-white p-2 rounded-lg shadow-xl">
                     <h3 class="text-center font-bold text-lg mb-2">營隊主視覺</h3>
-                    <img src="2026w01.png" alt="2026冬令營主視覺" class="w-full h-auto rounded border border-gray-300">
+                    <img src="2026w01.jpg" alt="2026冬令營主視覺" class="w-full h-auto rounded border border-gray-300">
                 </div>
                 <div class="bg-white p-2 rounded-lg shadow-xl">
                     <h3 class="text-center font-bold text-lg mb-2">課程表與費用</h3>
-                    <img src="2026w02.png" alt="2026冬令營課表" class="w-full h-auto rounded border border-gray-300">
+                    <img src="2026w02.jpg" alt="2026冬令營課表" class="w-full h-auto rounded border border-gray-300">
                 </div>
             </div>
 
@@ -70,7 +69,7 @@
                     <i class="fas fa-exclamation-triangle mr-2"></i> 重要行事曆提醒
                 </h3>
                 <ul class="list-disc list-inside text-lg space-y-1">
-                    <li><span class="font-bold text-orange-600">春節假期休營：</span> 2/14 ~ 2/22 期間為農曆春節，全體休營。</li>
+                    <li><span class="font-bold text-orange-600">春節假期休營：</span> 2/14 ~ 2/22 期間為農曆春節。</li>
                     <li><span class="font-bold text-green-600">正式開學日：</span> 2/23(星期一) 寒假結束，學校正式開學。</li>
                 </ul>
             </div>
