--- a/wintercamp.html
+++ b/wintercamp.html
@@ -28,9 +28,9 @@
     </nav>
 
     <div class="pt-24 pb-12 container mx-auto px-6">
-        <div class="text-center mb-16 bg-winter p-8 rounded-xl border-4 border-yellow-500">
-            <h1 class="text-5xl font-extrabold text-red-700 mt-2 tracking-wide">2026 顧德冬令營</h1>
-            <p class="text-2xl text-gray-700 mt-2 font-bold">寒假顧德不打烊・數理國文全方位衝刺</p>
+        <div class="text-center mb-10 bg-yellow-100 p-6 sm:p-8 rounded-lg shadow-md">
+            <h1 class="text-4xl sm:text-5xl font-extrabold text-red-700 mt-0 tracking-wide">2026 顧德冬令營</h1>
+            <p class="text-xl sm:text-2xl text-gray-700 mt-2 font-bold">寒假顧德不打烊・數理國文全方位衝刺</p>
         </div>
         
         <div class="max-w-4xl mx-auto">
@@ -69,7 +69,7 @@
                     <i class="fas fa-exclamation-triangle mr-2"></i> 重要行事曆提醒
                 </h3>
                 <ul class="list-disc list-inside text-lg space-y-1">
-                    <li><span class="font-bold text-orange-600">春節假期休營：</span> 2/14 ~ 2/22 期間為農曆春節。</li>
+                    <li><span class="font-bold text-orange-600">春節假期休營：</span> 2/14 ~ 2/22 期間為農曆春節，全體休營。</li>
                     <li><span class="font-bold text-green-600">正式開學日：</span> 2/23(星期一) 寒假結束，學校正式開學。</li>
                 </ul>
             </div>
