--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
     </a>
 
-    <a href="https://douliutimer-gkegcwva.manus.space/" target="_blank" class="floating-timer fixed top-2/5 right-0 z-50 flex items-center bg-red-600 text-white px-3 py-2 text-xs sm:px-4 sm:py-3 sm:text-sm rounded-l-xl shadow-2xl cursor-pointer border-y-2 border-l-2 border-white hover:bg-red-700">
+    <a href="https://douliutimer-gkegcwva.manus.space/" target="_blank" class="floating-timer fixed top-1/2 right-0 z-50 flex items-center bg-red-600 text-white px-3 py-2 text-xs sm:px-4 sm:py-3 sm:text-sm rounded-l-xl shadow-2xl cursor-pointer border-y-2 border-l-2 border-white hover:bg-red-700">
         <div class="flex flex-col items-center">
             <i class="fas fa-stopwatch sm:text-2xl text-lg mb-1 animate-pulse"></i>
             <span class="writing-vertical font-bold tracking-widest text-sm">段考倒數</span>
@@ -160,7 +160,13 @@
                     <i class="fas fa-user-friends mr-3"></i> 課程名額：僅剩 8 席
                 </div>
             </div>
+
+            <div class="mt-8">
+                <a href="wintercamp.html" class="inline-block bg-red-600 text-white font-extrabold text-xl px-12 py-5 rounded-lg shadow-2xl hover:bg-red-700 hover:scale-105 transition transform">
+                    <i class="fas fa-info-circle mr-2"></i> 點擊查看詳細課表！
+                </a>
             </div>
+        </div>
     </section>
 
 
