--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         .bg-line { background-color: #00C300; } /* LINE 綠色 */
         
         .hero-bg {
-            background-image: linear-gradient(rgba(0, 50, 100, 0.7), rgba(0, 50, 100, 0.7)), url('https://images.unsplash.com/photo-1635070041078-e3c7b375-9c8e-4a69-87a2-7b0f0f0f0f0f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1600&q=80');
+            background-image: linear-gradient(rgba(0, 50, 100, 0.7), rgba(0, 50, 100, 0.7)), url('https://images.unsplash.com/photo-1635070041078-e363dbe005cb?ixlib=rb-4.0.3&auto=format&fit=crop&w=1600&q=80');
             background-size: cover;
             background-position: center;
         }
@@ -86,7 +86,7 @@
         </div>
     </a>
 
-    <a href="https://douliutimer-gkegcwva.manus.space/" target="_blank" class="floating-timer fixed top-1/3 right-0 z-50 flex items-center bg-red-600 text-white px-3 py-2 text-xs sm:px-4 sm:py-3 sm:text-sm rounded-l-xl shadow-2xl cursor-pointer border-y-2 border-l-2 border-white hover:bg-red-700">
+    <a href="https://douliutimer-gkegcwva.manus.space/" target="_blank" class="floating-timer fixed top-1/2 right-0 z-50 flex items-center bg-red-600 text-white px-3 py-2 text-xs sm:px-4 sm:py-3 sm:text-sm rounded-l-xl shadow-2xl cursor-pointer border-y-2 border-l-2 border-white hover:bg-red-700">
         <div class="flex flex-col items-center">
             <i class="fas fa-stopwatch sm:text-2xl text-lg mb-1 animate-pulse"></i>
             <span class="writing-vertical font-bold tracking-widest text-sm">段考倒數</span>
@@ -134,6 +134,18 @@
         </div>
     </header>
 
+    <section class="py-12 sm:py-16 bg-red-800 text-white relative overflow-hidden">
+        <div class="absolute inset-0 bg-[url('https://www.transparenttextures.com/patterns/stardust.png')] opacity-20"></div>
+        <div class="container mx-auto px-6 text-center relative z-10">
+            <i class="fas fa-trophy text-5xl sm:text-6xl text-yellow-400 mb-3 animate-bounce"></i>
+            <h2 class="text-3xl sm:text-4xl font-bold mb-3">狂賀！斗六顧徳 榜單大放異彩</h2>
+            <p class="text-lg sm:text-xl text-red-100 mb-6">見證實力，超越自我。點擊下方按鈕查看最新亮眼榜單。</p>
+            <a href="honor.html" class="inline-block bg-yellow-400 text-red-900 font-extrabold text-lg sm:text-xl px-8 py-3 sm:px-10 sm:py-4 rounded-full shadow-xl hover:bg-yellow-300 hover:scale-105 transition transform">
+                查看完整榮譽榜 <i class="fas fa-arrow-right ml-2"></i>
+            </a>
+        </div>
+    </section>
+
     <section id="wintercamp" class="py-10 bg-yellow-100 border-b-2 border-yellow-300">
         <div class="container mx-auto px-6 text-center">
             <span class="bg-red-600 text-white font-bold px-3 py-1 rounded text-sm">限額招生中！</span>
@@ -149,12 +161,7 @@
                 </div>
             </div>
 
-            <div class="mt-8">
-                <a href="wintercamp.html" class="inline-block bg-red-600 text-white font-extrabold text-xl px-12 py-5 rounded-lg shadow-2xl hover:bg-red-700 hover:scale-105 transition transform">
-                    <i class="fas fa-info-circle mr-2"></i> 點擊查看詳細課表！
-                </a>
             </div>
-        </div>
     </section>
 
 
