--- a/honor.html
+++ b/honor.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         body { font-family: 'Microsoft JhengHei', sans-serif; }
-        .bg-brand { background-color: #0056b3; }
-        .bg-line { background-color: #00C300; }
+        .bg-brand { background-color: #0056b3; } /* 品牌藍 */
+        .bg-line { background-color: #00C300; } /* LINE 綠色 */
         .brand-color { color: #0056b3; }
     </style>
 </head>
@@ -50,20 +50,20 @@
             </div>
 
             <div class="bg-white p-4 rounded-lg shadow-lg border border-gray-200 hover:shadow-xl hover:-translate-y-1 transition duration-300 group">
-                <a href="https://via.placeholder.com/600x800?text=校排進步榮譽榜" target="_blank" class="block overflow-hidden rounded">
-                    <img src="https://via.placeholder.com/600x800?text=校排進步榮譽榜" class="w-full h-auto transform transition duration-300 group-hover:scale-105 border-2 border-gray-100">
+                <a href="校排進步榮譽榜.png" target="_blank" class="block overflow-hidden rounded">
+                    <img src="校排進步榮譽榜.png" class="w-full h-auto transform transition duration-300 group-hover:scale-105 border-2 border-gray-100">
                 </a>
                 <p class="text-center mt-3 font-extrabold text-xl text-blue-700">校排進步榮譽榜</p>
             </div>
 
             <div class="bg-white p-4 rounded-lg shadow-lg border border-gray-200 hover:shadow-xl hover:-translate-y-1 transition duration-300 group">
-                <a href="https://via.placeholder.com/600x800?text=數學滿分榜" target="_blank" class="block overflow-hidden rounded">
-                    <img src="https://via.placeholder.com/600x800?text=數學滿分榜" class="w-full h-auto transform transition duration-300 group-hover:scale-105 border-2 border-gray-100">
+                <a href="數學滿分榜.png" target="_blank" class="block overflow-hidden rounded">
+                    <img src="數學滿分榜.png" class="w-full h-auto transform transition duration-300 group-hover:scale-105 border-2 border-gray-100">
                 </a>
                 <p class="text-center mt-3 font-extrabold text-xl text-blue-700">數學滿分榜</p>
             </div>
 
-            </div>
+        </div>
         
         <div class="text-center mt-16">
             <a href="index.html" class="inline-block bg-blue-600 text-white font-bold px-8 py-3 rounded-full hover:bg-blue-700 transition">
