--- a/honor.html
+++ b/honor.html
@@ -44,21 +44,21 @@
             
             <div class="bg-white p-4 rounded-lg shadow-lg border border-red-200 hover:shadow-xl hover:-translate-y-1 transition duration-300 group">
                 <a href="113年學期成績優異.png" target="_blank" class="block overflow-hidden rounded">
-                    <img src="113年學期成績優異.png" alt="113年學期成績優異" class="w-full h-auto transform transition duration-300 group-hover:scale-105 border-2 border-red-100">
+                    <img src="113年學期成績優異.png" class="w-full h-auto transform transition duration-300 group-hover:scale-105 border-2 border-red-100">
                 </a>
                 <p class="text-center mt-3 font-extrabold text-xl text-red-700">113年學期成績優異</p>
             </div>
 
             <div class="bg-white p-4 rounded-lg shadow-lg border border-gray-200 hover:shadow-xl hover:-translate-y-1 transition duration-300 group">
                 <a href="校排進步榮譽榜.png" target="_blank" class="block overflow-hidden rounded">
-                    <img src="校排進步榮譽榜.png" alt="校排進步榮譽榜" class="w-full h-auto transform transition duration-300 group-hover:scale-105 border-2 border-gray-100">
+                    <img src="校排進步榮譽榜.png" class="w-full h-auto transform transition duration-300 group-hover:scale-105 border-2 border-gray-100">
                 </a>
                 <p class="text-center mt-3 font-extrabold text-xl text-blue-700">校排進步榮譽榜</p>
             </div>
 
             <div class="bg-white p-4 rounded-lg shadow-lg border border-gray-200 hover:shadow-xl hover:-translate-y-1 transition duration-300 group">
                 <a href="數學滿分榜.png" target="_blank" class="block overflow-hidden rounded">
-                    <img src="數學滿分榜.png" alt="數學滿分榜" class="w-full h-auto transform transition duration-300 group-hover:scale-105 border-2 border-gray-100">
+                    <img src="數學滿分榜.png" class="w-full h-auto transform transition duration-300 group-hover:scale-105 border-2 border-gray-100">
                 </a>
                 <p class="text-center mt-3 font-extrabold text-xl text-blue-700">數學滿分榜</p>
             </div>
